Es ahora un parrafo
La descripcion es ahora un parrafo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Bienvenido a la pagina WEB</h1>
-    <h2>Esta es la descripcion de la pagina WEB</h2>
+    <p>Esta es la descripcion de la pagina WEB</p>
 </body>
     </html>
