--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
     <title>Esta es la pagina web</title>
 </head>
-<body>
+<body style="background-color:#c6c567;">
     <h1>Bienvenido a la pagina WEB</h1>
     <p>Esta es la descripcion de la pagina WEB</p>
 </body>
