--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Bienvenido a la pagina WEB</h1>
     <p>Esta es la descripcion de la pagina WEB</p>
-    <p>ahora a cambiado</p>
+    <p>Segundo cambio en el body</p>
 </body>
     </html>
